@@ -128,6 +128,7 @@
 #include <spot/twaalgos/complement.hh>
 #include <spot/twaalgos/emptiness.hh>
 #include <spot/twaalgos/gtec/gtec.hh>
+#include <spot/twaalgos/genem.hh>
 #include <spot/twaalgos/lbtt.hh>
 #include <spot/twaalgos/ltl2taa.hh>
 #include <spot/twaalgos/ltl2tgba_fm.hh>
@@ -575,6 +576,7 @@ def state_is_accepting(self, src) -> "bool":
 %include <spot/twaalgos/emptiness.hh>
 %template(list_step) std::list<spot::twa_run::step>;
 %include <spot/twaalgos/gtec/gtec.hh>
+%include <spot/twaalgos/genem.hh>
 %include <spot/twaalgos/lbtt.hh>
 %include <spot/twaalgos/ltl2taa.hh>
 %include <spot/twaalgos/ltl2tgba_fm.hh>
