@@ -19,6 +19,12 @@ New in spot 2.6.0.dev  (not yet released)
     as aut.show_storage() in a Jupyter notebook.  See
     https://spot.lrde.epita.fr/ipynb/twagraph-internals.html
 
+  - spot::generic_emptiness_check() is a new function that performs
+    emptiness checks of twa_graph_ptr (i.e., automata not built
+    on-the-fly) with an *arbitrary* acceptance condition.  Its sister
+    spot::generic_emptiness_check_scc() can be used to decide the
+    emptiness of an SCC.
+
 New in spot 2.6  (2018-07-04)
 
   Command-line tools:
